# ascdoc

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.config.js
docs/: book.toml
docs/src/: SUMMARY.md  chapter_1.md  chapter_2.md
src/: app.rs  explorer.rs  lib.rs  main.rs  settings.rs  syntax.rs  widgets.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: files.rs  lib.rs  main.rs  theme.rs
src/app/: buffer.rs  explorer.rs  lines.rs  mod.rs
styles/: base.css  styles.min.css
