[package]
name = "ascdoc-ui"
version = "0.1.0"
edition = "2021"

# See https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
iced = { version = "0.13.1", features = ["highlighter", "tokio", "debug"] }
icondata = "0.5.0"
tokio = { version = "1.43.0", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
